<resources>
    <string name="app_name">Moertschen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="todo">ToDo</string>
    <string name="todos">ToDos</string>

    <string name="event">Event</string>
    <string name="events">Events</string>

    <string name="note">Notiz</string>
    <string name="notes">Notizen</string>

    <string name="home">Home</string>
    <string name="titel">Titel</string>
    <string name="description">Beschreibung</string>
    <string name="erinnerung">Erinnerung</string>
    <string name="speichern">Speichern</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="date">Datum</string>
    <string name="time">Uhrzeit</string>

    <string name="required_input">Pflichtfeld</string>
    <string name="startdate">Startdatum</string>
    <string name="enddate">Enddatum</string>

    <string name="dateInPast">"Datum muss in Zukunft liegen"</string>
    <string name="noDescription">Keine Beschreibung</string>
    <string name="noTags">Keine Tags vorhanden</string>
</resources>
