<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_todos"
                android:icon="@drawable/ic_menu_check"
                android:title="@string/todos"/>
        <item
                android:id="@+id/nav_events"
                android:icon="@drawable/ic_menu_calendar"
                android:title="@string/events"/>
        <item
                android:id="@+id/nav_notes"
                android:icon="@drawable/ic_menu_note"
                android:title="@string/notes"/>
    </group>

</menu>
